structure of home page completed

--- a/EAM_3/index.html
+++ b/EAM_3/index.html
@@ -87,12 +87,12 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a class="active" href="index.html">Αρχική</a></li>
-                        <li><a href="#">Κατάσταση Μέσων</a></li>
+                        <li><a href="status.html">Κατάσταση Μέσων</a></li>
                         <li><a href="#">Χάρτες</a></li>
                         <li class="dropdown" >
-                            <a href="https://github.com/wmsksf/hci" class="dropbtn">Εισιτήρια-Κάρτες</a>
+                            <a href="#" class="dropbtn">Εισιτήρια-Κάρτες</a>
                             <div class="dropdown-content">
-                                <a href="https://www.google.gr/">Σημεία Έκδοσης/Επαναφόρτισης</a>
+                                <a href="#">Σημεία Έκδοσης/Επαναφόρτισης</a>
                                 <a href="#">Τιμές Εισιτηρίων</a>
                                 <a href="#">Online Αγορά Εισιτηρίων</a>
                             </div>
@@ -276,8 +276,7 @@
             </div><!-- end row -->
             <div class="row">
                 <div class="col-md-3 col-md-offset-9 wow slideInRight hidden-xs hidden-sm">
-                    <button class="btnn" onclick="window.open('#', '_blank')">Ανακαλύψτε την Αθήνα</button>
-                        <!-- <a data-scroll href="#" class="btnn">Ανακαλύψτε την Αθήνα</a> -->
+                    <button class="btnn" onclick="window.open('#', '_blank')"> <i class="fa fa-map fa-2x" style="height: 15%; width: 15%; float: right;"></i>Ανακαλύψτε την Αθήνα</button>
                     </div>
                 </div>
             </div>
@@ -289,58 +288,50 @@
 	<div class="about-box">
 		<div class="container">
 			<div class="row">
-				<div class="top-feature owl-carousel owl-theme">
+                <div class="col-md-4 wow slideInLeft hidden-xs hidden-sm">
 					<div class="item">
 						<div class="single-feature">
-							<div class="icon"><img src="uploads/icon-01.png" class="img-responsive" alt=""></div>
-							<h4><a href="#">Full Furnished</a></h4>
-							<p>Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi. </p>
-						</div> 
-					</div>
-					<div class="item">
-						<div class="single-feature">
-							<div class="icon"><img src="uploads/icon-02.png" class="img-responsive" alt=""></div>
-							<h4><a href="#">Living Inside a Nature</a></h4>
-							<p>Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi.</p>
-						</div> 
-					</div>
-					<div class="item">
-						<div class="single-feature">
-							<div class="icon"><img src="uploads/icon-03.png" class="img-responsive" alt=""></div>
-							<h4><a href="#">Luxurious Fittings</a></h4>
-							<p>Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi. </p>
-						</div> 
-					</div>
-					<div class="item">
-						<div class="single-feature">
-							<div class="icon"><img src="uploads/icon-04.png" class="img-responsive" alt=""></div>
-							<h4><a href="#">Non Stop Security</a></h4>
-							<p>Lorem Is a dummy Mauris eu porta orci. In at erat enim. Suspendisse felis erat, volutpat at nisl sit amet, maximus molestie nisi. </p>
-						</div> 
-					</div>
-				</div>
-			</div>
-			
-			<hr class="hr1">
-			
-			<div class="row">
-				<div class="col-md-6">
-                    <div class="post-media wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
-                        <img src="uploads/about_bg.jpg" alt="" class="img-responsive">                        
-                    </div><!-- end media -->
-                </div>
-				<div class="col-md-6">
-					<div class="message-box right-ab">
-                        <h4>Awards Winning Real Estate Company</h4>
-                        <h2>Welcome to CITY Real Estate</h2>
-                        <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
-						<p>Aenean eleifend in felis id viverra. Vestibulum semper ex eu molestie pulvinar. Maecenas non efficitur metus, et semper sem. Mauris ligula sapien, gravida a scelerisque ut, vehicula sed mauris. Proin dapibus mi id vulputate euismod. Nam ullamcorper dui tellus, non lacinia lorem hendrerit eu. Donec at orci cursus, rutrum metus eget, cursus turpis.  </p>
-						<a href="#" class="btn btn-light btn-radius grd1 btn-brd"> Read More </a>
+                            <div class="icon"><i class="fa fa-bus fa-5x" style="height: 25%; width: 25%; float:left;"></i>
+                                <h4><a href="#">Λεωφορεία</a></h4>
+                                <h4><a href="#">Τρόλει</a></h4>
+                            </div>  
+                        </div> 
                     </div>
-				</div>
-			</div>
-			
-		</div>
+                </div>
+                <div class="col-md-4 wow slideInLeft hidden-xs hidden-sm">    
+					<div class="item">
+						<div class="single-feature">
+                            <div class="icon"><i class="fa fa-plane fa-5x" style="height: 25%; width: 25%; float:left;"></i>
+                                <h4><a href="#">Πρόσβαση στο Αεροδρόμιο</a></h4>
+                            </div>      
+                        </div> 
+                    </div>
+                </div>
+                <div class="col-md-4 wow slideInRight hidden-xs hidden-sm">
+                    <div class= "container" style="width: 50%;">
+                        <div class="row" style="gap: 12px;">
+                                <div class="item">
+                                    <div class="single-feature">
+                                        <div class="icon" style="text-align: right;"><i class="fa fa-info-circle fa-3x" style="height: 20%; width: 20%; float:left;"></i>
+                                            <h5><a href="#">Επικοινωνία</a></h5>
+                                        </div>
+                                    </div> 
+                                </div>
+                        </div>
+                        <div class="row" style="padding-top: 12px;">
+                            <div class="item">
+                                <div class="single-feature">
+                                    <div class="icon" style="text-align: right;"><i class="fa fa-question-circle fa-3x" style="height: 20%; width: 20%; float:left;"></i>
+                                        <h5><a href="#">Συχνές Ερωτήσεις</a></h5>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>    
+    
     </div>
     <!--END OF SECOND SECTION-->
 
