--- a/EAM_3/status.html
+++ b/EAM_3/status.html
@@ -36,6 +36,7 @@
     <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment-with-locales.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/src/js/bootstrap-datetimepicker.js"></script>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -86,8 +87,8 @@
                 <!--NAV-BAR-->
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="active" href="index.html">Αρχική</a></li>
-                        <li><a href="#">Κατάσταση Μέσων</a></li>
+                        <li><a href="index.html">Αρχική</a></li>
+                        <li><a class="active" href="status.html">Κατάσταση Μέσων</a></li>
                         <li><a href="#">Χάρτες</a></li>
                         <li class="dropdown" >
                             <a href="https://github.com/wmsksf/hci" class="dropbtn">Εισιτήρια-Κάρτες</a>
@@ -158,35 +159,85 @@
     </header>
     <!--end of HEADER-->
 
+    <div class="all-title-box">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h2>Κατάσταση μέσων</h2>
+				</div>
+			</div>
+		</div>
+	</div>
+
     <div class="about-box">
 		<div class="container">
-            <nav id="breadcrumbs">
-                <ul>
-                    <li><a href="#"><i class="fa fa-home global-radius"></i></a></li>
-                    <li>Κατάσταση μέσων</li>
-                </ul>
-            </nav>
-
-            <div class="section-title row text-center">
-                <div class="col-md-8 col-md-offset-2">
-                    <h3>ΚΑΤΑΣΤΑΣΗ ΜΕΣΩΝ</h3>
-                </div>
-            </div>
-
             <div class="row">
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <div class='input-group date' id='datetimepicker1'>
-                            <input type='text' class="form-control" />
-                            <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-calendar"></span>
-                            </span>
+                <nav id="breadcrumbs">
+                    <ul>
+                        <li><a href="#"><i class="fa fa-home global-radius"></i></a></li>
+                        <li>Κατάσταση μέσων</li>
+                    </ul>
+                </nav>
+
+                <div class="col-md-12">
+                    <div class="navbar navbar-default">
+                        <div id="navbar2" class="navbar-collapse collapse">
+                            <ul class="nav navbar-inner">
+                                <li><a class="active" href="index.html">Τώρα</a></li>
+                                <li><a href="#">Αυτή την εβδομάδα</a></li>
+                                <li><a onclick="getCalendar()">Επιλογή ημερομηνίας</a>
+                                <div id="calendar" style="display:none;">
+                                    <div class="form-group">
+                                        <div class='input-group date' id='datetimepicker'>
+                                            <input type='text' class="form-control" />
+                                            <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-calendar"></span>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <script>
+                                        $('#datetimepicker').datetimepicker({
+                                            locale: 'el',
+                                            format: 'DD/MM/YYYY'});
+                                    </script>
+                    
+                                    <script>
+                                        function getCalendar() {
+                                          var x = document.getElementById("calendar");
+                                          if (x.style.display === "none") {
+                                                $("#calendar").slideDown("slow");
+                                            x.style.display = "block";
+                                          } else {
+                                            x.style.display = "none";
+                                          }
+                                        }
+                                    </script>
+                                </div></li>
+                            </ul>
                         </div>
                     </div>
-                    <script>
-                        $('#datetimepicker1').datetimepicker();
-                    </script>
                 </div>
+
+                <div class="col-md-3 wow slideInLeft hidden-xs hidden-sm">
+                    <div class="contact_form">
+                        <h4>Αναζήτηση Γραμμής</h4>
+                        <form id="contactform1" class="row" name="contactform" method="post">
+                            <fieldset class="row-fluid">
+                                <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
+                                    <input type="text" name="line" id="line" class="form-control" placeholder="Από">
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 col-lg-offset-8 text-center">
+                                    <button type="submit" value="SEND" id="submit1" class="btn btn-light btn-radius btn-brd grd1 btn-block">>></button>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>    
+                </div>
+
+                <div class="col-md-9 wow slideInRight hidden-xs hidden-sm">
+                    <div id="map"></div>
+                </div>
+            </div>
         </div>
     </div>
 
