updated contact.html and about.html ++ sub elements (news, org)

--- a/EAM_3/index.html
+++ b/EAM_3/index.html
@@ -105,10 +105,10 @@
                             </div>
                         </li> 
                         <li class="dropdown" >
-                            <a href="#" class="dropbtn">Οργανισμός ΟΑΣΑ</a>
+                            <a href="about.html" class="dropbtn">Οργανισμός ΟΑΣΑ</a>
                             <div class="dropdown-content">
-                                <a href="#">Νέα-Ανακοινώσεις</a>
-                                <a href="#">Προφίλ Οργανισμού</a>
+                                <a href="news.html">Νέα-Ανακοινώσεις</a>
+                                <a href="org.html">Προφίλ Οργανισμού</a>
                             </div>
                         </li>   
                         <li><a href="contact.html">Επικοινωνία</a></li>
@@ -356,12 +356,12 @@
                         </div>
 
                         <ul class="twitter-widget footer-links">
-                            <li><a href="#">Κατάσταση μέσων</a></li>
+                            <li><a href="status.html">Κατάσταση μέσων</a></li>
                             <li><a href="#">Χάρτες</a></li>
                             <li><a href="#">Εισιτήρια-Κάρτες</a></li>
 							<li><a href="#">Προσβασιμότητα</a></li>
-							<li><a href="#">Οργανισμός ΟΑΣΑ</a></li>
-							<li><a href="#">Επικοινωνία</a></li>
+							<li><a href="about.html">Οργανισμός ΟΑΣΑ</a></li>
+							<li><a href="contact.html">Επικοινωνία</a></li>
                         </ul><!-- end links -->
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
