--- a/EAM_3/status.html
+++ b/EAM_3/status.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>OASA</title>  
+    <title>ΟΑΣΑ Κατάσταση Μέσων</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -39,7 +39,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/src/js/bootstrap-datetimepicker.js"></script>
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
     <link href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/build/css/bootstrap-datetimepicker.css" rel="stylesheet">
 
     <!-- Modernizer for Portfolio -->
@@ -58,15 +58,6 @@
         <span class="loader"><span class="loader-inner"></span></span>
     </div><!-- end loader -->
     <!-- END LOADER -->
-
-    <!--ICON BAR-->
-    <div class="icon-bar">
-        <a href="https://www.facebook.com/OASA.GR" class="social-links" target="_blank"><i class="fa fa-facebook global-radius"></i></a> 
-        <a href="https://www.instagram.com/OASA.GR/" class="social-links" target="_blank"><i class="fa fa-instagram global-radius"></i></a> 
-        <a href="https://www.linkedin.com/company/athenspublictransportoasa/about/" class="social-links" target="_blank"><i class="fa fa-linkedin global-radius"></i></a>
-        <a href="https://www.youtube.com/channel/UC0XdkZnOHhRLc3NE9tm4NUQ" class="social-links" target="_blank"><i class="fa fa-youtube global-radius"></i></a> 
-    </div>
-    <!--end of ICON BAR-->
 
     <!--HEADER-->
     <header class="header header_style_01">
@@ -91,9 +82,9 @@
                         <li><a class="active" href="status.html">Κατάσταση Μέσων</a></li>
                         <li><a href="#">Χάρτες</a></li>
                         <li class="dropdown" >
-                            <a href="https://github.com/wmsksf/hci" class="dropbtn">Εισιτήρια-Κάρτες</a>
+                            <a href="#" class="dropbtn">Εισιτήρια-Κάρτες</a>
                             <div class="dropdown-content">
-                                <a href="https://www.google.gr/">Σημεία Έκδοσης/Επαναφόρτισης</a>
+                                <a href="#">Σημεία Έκδοσης/Επαναφόρτισης</a>
                                 <a href="#">Τιμές Εισιτηρίων</a>
                                 <a href="#">Online Αγορά Εισιτηρίων</a>
                             </div>
@@ -106,7 +97,7 @@
                             </div>
                         </li> 
                         <li class="dropdown" >
-                            <a href="#" class="dropbtn">Οργανισμός ΟΑΣΑ</a>
+                            <a href="about.html" class="dropbtn">Οργανισμός ΟΑΣΑ</a>
                             <div class="dropdown-content">
                                 <a href="#">Νέα-Ανακοινώσεις</a>
                                 <a href="#">Προφίλ Οργανισμού</a>
@@ -174,7 +165,7 @@
             <div class="row">
                 <nav id="breadcrumbs">
                     <ul>
-                        <li><a href="#"><i class="fa fa-home global-radius"></i></a></li>
+                        <li><a href="index.html"><i class="fa fa-home global-radius fa-lg"></i></a></li>
                         <li>Κατάσταση μέσων</li>
                     </ul>
                 </nav>
@@ -262,12 +253,12 @@
                         </div>
 
                         <ul class="twitter-widget footer-links">
-                            <li><a href="#">Κατάσταση μέσων</a></li>
+                            <li><a href="status.html">Κατάσταση μέσων</a></li>
                             <li><a href="#">Χάρτες</a></li>
                             <li><a href="#">Εισιτήρια-Κάρτες</a></li>
 							<li><a href="#">Προσβασιμότητα</a></li>
-							<li><a href="#">Οργανισμός ΟΑΣΑ</a></li>
-							<li><a href="#">Επικοινωνία</a></li>
+							<li><a href="about.html">Οργανισμός ΟΑΣΑ</a></li>
+							<li><a href="contact.html">Επικοινωνία</a></li>
                         </ul><!-- end links -->
                     </div><!-- end clearfix -->
                 </div><!-- end col -->
