few changes in colors and added faq

--- a/EAM_3/faq.html
+++ b/EAM_3/faq.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>ΟΑΣΑ Οργανισμός</title>  
+    <title>ΟΑΣΑ Συχνές Ερωτήσεις</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -153,65 +153,107 @@
         </nav>
     </header>
     <!--end of HEADER-->
-
+    
     <div class="all-title-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2> Προφίλ Οργανισμού ΟΑΣΑ</h2>
+					<h2>Συχνές Ερωτήσεις</h2>
 				</div>
 			</div>
 		</div>
     </div>
 
-    <!--SECOND SECTION-->
-	<div class="about-box">
-    	<div class="container">
+    <!-- SECTION -->
+    <div class="about-box">
+        <div class="container ">
             <!-- Breadcrumbs -->
             <nav id="breadcrumbs">
                 <ul>
                     <li><a href="index.html"><i class="fa fa-home global-radius fa-lg"></i></a></li>
-                    <li><a href="about.html">Οργανισμός ΟΑΣΑ</a></li>
-                    <li>Προφίλ Οργανισμού ΟΑΣΑ</li>
+                    <li>Συχνές Ερωτήσεις</li>
                 </ul>
             </nav>
-            
-            <div class="row">
-                <div class="item">
-					<div class="single-feature" style="margin-top: 50px; pointer-events: none;">
-                            <h4 style="text-align: center;">Ιστορία</h4>
-                            <p style="text-align: center;">Η Ανώνυμη Εταιρεία με την επωνυμία «ΟΡΓΑΝΙΣΜΟΣ ΑΣΤΙΚΩΝ ΣΥΓΚΟΙΝΩΝΙΩΝ ΑΘΗΝΩΝ» και τον διακριτικό τίτλο «Ο.Α.Σ.Α. Α.Ε.»
-                                 είναι δημόσια επιχείρηση κοινωφελούς χαρακτήρα που ιδρύθηκε ως νομικό πρόσωπο ιδιωτικού δικαίου με τον ν.2175/93 (Α΄211) και υπόκειται νομοθετικά στις διατάξεις των ν. 3920/2011 (Α’ 33), ν. 3429/2005 (Α’ 314),
-                                ν. 4389/2016 (Α’ 94) και ν. 4548/2018 (Α’ 104), όπως ισχύουν.</p>
-					</div> 
-				</div>
+
+        </br>
+
+            <div class="section-title text-center">
+                <h3>Απαντάμε στις ερωτήσεις σας!</h3>
             </div>
 
-            <div class="row">
-                <div class="item">
-					<div class="single-feature" style="margin-top: 50px; pointer-events: none;">
-                            <h4 style="text-align: center;">Διοικητικό Συμβούλιο</h4>
-                            <p style="text-align: center;">Το Διοικητικό Συμβούλιο είναι το Ανώτατο Διοικητικό και το κατ’ εξοχήν Αποφασιστικό Οργανο του Οργανισμού και είναι αρμόδιο να αποφασίζει,
-                                 να εποπτεύει και να ασκεί έλεγχο σε κάθε θέμα που αφορά στην οργάνωση, στη διοίκηση, στη λειτουργία, στη διαχείριση της περιουσίας και γενικά στη δραστηριότητα και στην επιδίωξη των σκοπών του Οργανισμού.</p>
-					</div> 
-				</div>
+            <div class="accordion" id="accordion-tab-1">
+                <div class="card">
+                    <div class="card-header" id="accordion-tab-1-heading-1">
+                        <h2 style="font-size: 70%;">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#accordion-tab-1-content-1" aria-expanded="false" aria-controls="accordion-tab-1-content-1">
+                                Τι είναι οι Συγκοινωνίες Αθηνών;
+                            </button>
+                        </h2>
+                    </div>
+                    <div class="collapse" id="accordion-tab-1-content-1" aria-labelledby="accordion-tab-1-heading-1" data-parent="#accordion-tab-1">
+                        <div class="card-body">
+                            <p>Οι Συγκοινωνίες Αθηνών είναι οι δημόσιες υπηρεσίες μετακίνησης, που προσφέρουν οι Ο.Α.Σ.Α., ΣΤΑ.ΣΥ. (μετρό, ηλεκτρικός και τραμ) και Ο.ΣΥ. (λεωφορεία και τρόλεϊ), 
+                                οι οποίες λειτουργούν με τρόπο ενιαίο για να κάνουν πραγματικότητα την ιδέα: «Μια πόλη. Ένα δίκτυο.».
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <hr class="hr4">
+                <div class="card">
+                    <div class="card-header" id="accordion-tab-1-heading-2">
+                        <h2 style="font-size: 70%;">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#accordion-tab-1-content-2" aria-expanded="false" aria-controls="accordion-tab-1-content-2">
+                                Τα εισιτήρια αξίας 1,40 και 0,60 ευρώ εξακολουθούν να ισχύουν για 90 λεπτά;
+                            </button>
+                        </h2>
+                    </div>
+                    <div class="collapse" id="accordion-tab-1-content-2" aria-labelledby="accordion-tab-1-heading-2" data-parent="#accordion-tab-1">
+                        <div class="card-body">
+                            <p>Βεβαίως, τα εισιτήρια ισχύουν για 90 λεπτά από την πρώτη επικύρωσή τους, ανεξάρτητα από τις ενδιάμεσες επιβιβάσεις/επικυρώσεις.</p>
+                        </div>
+                    </div>
+                </div>
+                <hr class="hr4">
+                <div class="card">
+                    <div class="card-header" id="accordion-tab-1-heading-3">
+                        <h2 style="font-size: 70%;">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#accordion-tab-1-content-3" aria-expanded="false" aria-controls="accordion-tab-1-content-3">
+                                Ποιες είναι οι νέες ενιαίες κάρτες απεριορίστων διαδρομών και οι τιμές τους;
+                            </button>
+                        </h2>
+                    </div>
+                    <div class="collapse" id="accordion-tab-1-content-3" aria-labelledby="accordion-tab-1-heading-3" data-parent="#accordion-tab-1">
+                        <div class="card-body">
+                            <p> Οι νέες κάρτες είναι για όλα τα μέσα και προωθούν τη συνδυαστική χρήση των μέσων για σύντομες και αξιόπιστες μετακινήσεις.</p>
+                            <p>Συγκεκριμένα, υπάρχουν 2 τύποι μηνιαίων καρτών:</p>
+                            <ol>
+                                <li>για όλα τα μέσα εκτός αεροδρόμιου & Χ80: 30€ (μειωμένη 15€),</li>
+                                <li>για όλα τα μέσα και για το αεροδρόμιο (εκτός Χ80): 45€ (μειωμένη 23€).</li>
+                            </ol>    
+                        </div>
+                    </div>
+                </div>
+                <hr class="hr4">
+                <div class="card">
+                    <div class="card-header" id="accordion-tab-1-heading-4">
+                        <h2 style="font-size: 70%;">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#accordion-tab-1-content-4" aria-expanded="false" aria-controls="accordion-tab-1-content-4">
+                                Είμαι δικαιούχος μειωμένου κομίστρου. Τι χρειάζεται να εκδώσω για να μετακινούμαι με τα μέσα;
+                            </button>
+                        </h2>
+                    </div>
+                    <div class="collapse" id="accordion-tab-1-content-4" aria-labelledby="accordion-tab-1-heading-4" data-parent="#accordion-tab-1">
+                        <div class="card-body">
+                            <p>Προσωποποιημένη κάρτα, στην οποία μπορείτε να φορτώσετε όποιον τύπο μειωμένης τιμής κομίστρου σας εξυπηρετεί, δηλαδή μηνιαίες ή άλλες χρονικές κάρτες αλλά και
+                                 εισιτήρια μειωμένης τιμής ή χρηματική αξία έως 50 ευρώ, από την οποία αφαιρείται η αξία ενός μειωμένου εισιτηρίου κάθε φορά που μετακινήστε.</p>  
+                        </div>
+                    </div>
+                </div>
+                <hr class="hr4">
             </div>
-
-            <div class="row">
-                <div class="item">
-					<div class="single-feature" style="margin-top: 50px; pointer-events: none;">
-                            <h4 style="text-align: center;">Περιοχή Εξυπηρέτησης</h4>
-                            <p style="text-align: center;">Η σημερινή Περιοχή Εξυπηρέτησης των Αστικών Συγκοινωνιών έχει καθορισθεί δια νόμου και δεν μπορεί να μεταβληθεί χωρίς αντίστοιχη νομοθετική ρύθμιση.
-                                Η περιοχή που εξυπηρετείται σήμερα από αστική συγκοινωνία εκτείνεται Δυτικά μέχρι την Ελευσίνα, Μάνδρα και Μαγούλα (Θριάσιο Πεδίο). Ανατολικά μέχρι την Πεντέλη, την Παλλήνη, τα Σπάτα, τη Λούτσα και το Κορωπί (περιοχή Μεσογείων).
-                                Βόρεια μέχρι τη Φυλή, τη Πάρνηθα, το Κρυονέρι, το φράγμα της Λίμνης του Μαραθώνα, το Διόνυσο, τη Σταμάτα και τη Νέα και την Παλαιά Πεντέλη. Νότια μέχρι τη θάλασσα και νοτιοανατολικά μέχρι και την Σαρωνίδα. Η περιοχή αυτή περιλαμβάνει ένα σύνολο 84 δήμων και κοινοτήτων/οικισμών.</p>
-                                <p>Σημ.*:Με την εφαρμογή του N.3852/10, ΦΕΚ 87/τ .Α'/2010 «Καλλικράτης» οι 84 υφιστάμενες Τοπικές Αυτοδιοικήσεις συνενώνονται σε 52 Δήμους. (Ημερομηνία Εφαρμογής: 1/1/2011)</p>
-					</div> 
-				</div>
-            </div>
-
         </div>
     </div>
-    <!--END OF SECOND SECTION-->
+    <!-- end of SECTION -->
 
     <!--FOOTER-->
     <footer class="footer">
