--- a/EAM_3/index.html
+++ b/EAM_3/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>OASA</title>  
+    <title>ΟΑΣΑ</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -135,13 +135,18 @@
                                             <div class="tab-content">
                                                 <div role="tabpanel" class="tab-pane active" id="home">
                                                     <form>
-                                                        <input type="text" name="username" class="username form-control" placeholder="Όνομα Χρήστη"/>
+                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
                                                         <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
-                                                        <input class="btn login" type="submit" value="Είσοδος" />
+                                                        <input class="btn login" type="submit" value="Είσοδος"/>
                                                     </form>
                                                 </div>
                                                 <div role="tabpanel" class="tab-pane" id="next">
-                                                    <p>TODO: sign in via google, facebook, oasa account (create in new page)</p>
+                                                    <form>
+                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
+                                                        <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
+                                                        <input type="password" name="password" class="password form-control" placeholder="Επανάληψη Συνθηματικού"/>
+                                                        <input class="btn login" type="submit" value="Εγγραφή"/>
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
@@ -313,7 +318,7 @@
                                 <div class="item">
                                     <div class="single-feature">
                                         <div class="icon" style="text-align: right;"><i class="fa fa-info-circle fa-3x" style="height: 20%; width: 20%; float:left;"></i>
-                                            <h5><a href="#">Επικοινωνία</a></h5>
+                                            <h5><a href="contact.html">Επικοινωνία</a></h5>
                                         </div>
                                     </div> 
                                 </div>
@@ -322,7 +327,7 @@
                             <div class="item">
                                 <div class="single-feature">
                                     <div class="icon" style="text-align: right;"><i class="fa fa-question-circle fa-3x" style="height: 20%; width: 20%; float:left;"></i>
-                                        <h5><a href="#">Συχνές Ερωτήσεις</a></h5>
+                                        <h5><a href="faq.html">Συχνές Ερωτήσεις</a></h5>
                                     </div>
                                 </div> 
                             </div>
