--- a/EAM_3/about.html
+++ b/EAM_3/about.html
@@ -116,13 +116,18 @@
                                             <div class="tab-content">
                                                 <div role="tabpanel" class="tab-pane active" id="home">
                                                     <form>
-                                                        <input type="text" name="username" class="username form-control" placeholder="Όνομα Χρήστη"/>
+                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
                                                         <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
-                                                        <input class="btn login" type="submit" value="Είσοδος" />
+                                                        <input class="btn login" type="submit" value="Είσοδος"/>
                                                     </form>
                                                 </div>
                                                 <div role="tabpanel" class="tab-pane" id="next">
-                                                    <p>TODO: sign in via google, facebook, oasa account (create in new page)</p>
+                                                    <form>
+                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
+                                                        <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
+                                                        <input type="password" name="password" class="password form-control" placeholder="Επανάληψη Συνθηματικού"/>
+                                                        <input class="btn login" type="submit" value="Εγγραφή"/>
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
