--- a/EAM_3/status.html
+++ b/EAM_3/status.html
@@ -78,8 +78,8 @@
                 <!--NAV-BAR-->
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Αρχική</a></li>
-                        <li><a class="active" href="status.html">Κατάσταση Μέσων</a></li>
+                        <li><a class="active" href="index.html">Αρχική</a></li>
+                        <li><a href="status.html">Κατάσταση Μέσων</a></li>
                         <li><a href="#">Χάρτες</a></li>
                         <li class="dropdown" >
                             <a href="#" class="dropbtn">Εισιτήρια-Κάρτες</a>
@@ -99,8 +99,8 @@
                         <li class="dropdown" >
                             <a href="about.html" class="dropbtn">Οργανισμός ΟΑΣΑ</a>
                             <div class="dropdown-content">
-                                <a href="#">Νέα-Ανακοινώσεις</a>
-                                <a href="#">Προφίλ Οργανισμού</a>
+                                <a href="news.html">Νέα-Ανακοινώσεις</a>
+                                <a href="org.html">Προφίλ Οργανισμού</a>
                             </div>
                         </li>   
                         <li><a href="contact.html">Επικοινωνία</a></li>
@@ -127,13 +127,18 @@
                                             <div class="tab-content">
                                                 <div role="tabpanel" class="tab-pane active" id="home">
                                                     <form>
-                                                        <input type="text" name="username" class="username form-control" placeholder="Όνομα Χρήστη"/>
+                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
                                                         <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
-                                                        <input class="btn login" type="submit" value="Είσοδος" />
+                                                        <input class="btn login" type="submit" value="Είσοδος"/>
                                                     </form>
                                                 </div>
                                                 <div role="tabpanel" class="tab-pane" id="next">
-                                                    <p>TODO: sign in via google, facebook, oasa account (create in new page)</p>
+                                                    <form>
+                                                        <input type="text" name="username" class="username form-control" placeholder="Email"/>
+                                                        <input type="password" name="password" class="password form-control" placeholder="Συνθηματικό"/>
+                                                        <input type="password" name="password" class="password form-control" placeholder="Επανάληψη Συνθηματικού"/>
+                                                        <input class="btn login" type="submit" value="Εγγραφή"/>
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
