--- a/EAM_3/contact.html
+++ b/EAM_3/contact.html
@@ -73,7 +73,7 @@
                 <!--NAV-BAR-->
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="active" href="index.html">Αρχική</a></li>
+                        <li><a href="index.html">Αρχική</a></li>
                         <li><a href="status.html">Κατάσταση Μέσων</a></li>
                         <li><a href="#">Χάρτες</a></li>
                         <li class="dropdown" >
@@ -98,7 +98,7 @@
                                 <a href="org.html">Προφίλ Οργανισμού</a>
                             </div>
                         </li>   
-                        <li><a href="contact.html">Επικοινωνία</a></li>
+                        <li><a class="active" href="contact.html">Επικοινωνία</a></li>
 						<li class="search-option">
 							<button class="search tran3s dropdown-toggle" id="searchDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search" aria-hidden="true"></i></button>
 							<form action="#" class="p-color-bg dropdown-menu tran3s" aria-labelledby="searchDropdown">
@@ -193,7 +193,7 @@
                                     <input type="email" name="email" id="email" class="form-control" placeholder="Email">
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" name="phone" id="phone" class="form-control" placeholder="Τηλέφωνο">
+                                    <input type="tel" name="phone" id="phone"  pattern="[0-9]{10}" class="form-control" placeholder="Τηλέφωνο">
                                 </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <textarea class="form-control" name="comments" id="comments" rows="6" placeholder="Δώστε λεπτομέρειες..."></textarea>
