--- a/EAM_3/news.html
+++ b/EAM_3/news.html
@@ -77,7 +77,7 @@
                 <!--NAV-BAR-->
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a class="active" href="index.html">Αρχική</a></li>
+                        <li><a href="index.html">Αρχική</a></li>
                         <li><a href="status.html">Κατάσταση Μέσων</a></li>
                         <li><a href="#">Χάρτες</a></li>
                         <li class="dropdown" >
@@ -96,7 +96,7 @@
                             </div>
                         </li> 
                         <li class="dropdown" >
-                            <a href="about.html" class="dropbtn">Οργανισμός ΟΑΣΑ</a>
+                            <a class="active" href="about.html" class="dropbtn">Οργανισμός ΟΑΣΑ</a>
                             <div class="dropdown-content">
                                 <a href="news.html">Νέα-Ανακοινώσεις</a>
                                 <a href="org.html">Προφίλ Οργανισμού</a>
